Dont output unnecessary message when login failed.

--- a/src/Adstacy/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Adstacy/UserBundle/Resources/views/Security/login.html.twig
@@ -42,7 +42,7 @@
         </div>
 
         {% if error %}
-          <div class="alert alert-danger">{{ error|trans }}</div>
+          <div class="alert alert-danger">{{ "security.login.failed" | trans }}</div>
         {% endif %}
       </div>
 
