--- a/src/Adstacy/AppBundle/Resources/views/Search/ads_content.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Search/ads_content.html.twig
@@ -3,5 +3,5 @@
 {% endfor %}
 {% if paginator.hasNextPage %}
   {% set params = {page: paginator.getNextPage} | merge(app.request.query.all) %}
-  <a href="{{ path('adstacy_app_search', params )}}" class="btn btn-lg btn-default btn-block next-page">More</a>
+  <a href="{{ path('adstacy_app_search_ads', params )}}" class="btn btn-lg btn-default btn-block next-page">More</a>
 {% endif %}
