--- a/src/Adstacy/AppBundle/Resources/views/User/show_followings.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/User/show_followings.html.twig
@@ -2,6 +2,6 @@
 
 {% block show_content %}
   {% for following in followings %}
-    {{ following.username }}
+    {% include 'AdstacyAppBundle:User:user.html.twig' with {user: following} %}
   {% endfor %}
 {% endblock %}
