--- a/src/Adstacy/AppBundle/Resources/views/User/user.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/User/user.html.twig
@@ -1,3 +1,3 @@
 <div class="user">
-  <a>@{{ user.username }}</>
+  <a href="{{ path('adstacy_app_user_profile', {username: user.username}) }}">@{{ user.username }}</>
 </div>
