--- a/src/Adstacy/AppBundle/Resources/views/Search/ads.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Search/ads.html.twig
@@ -16,6 +16,7 @@
           var $ads = $('.jscroll-added:last .ad');
           $masonry = $('.masonry').masonry('appended', $ads);
           $ads.find('img.lazy').lazyload();
+          $ads.find('.ad-desc').ajaxlink('ads');
         }
       });
     });
