--- a/src/Adstacy/AppBundle/Resources/views/Search/search.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Search/search.html.twig
@@ -1,4 +1,4 @@
-{% extends 'AdstacyAppBundle::layout.html.twig' %}
+{% extends is_ajax() ? '::ajax.html.twig' : 'AdstacyAppBundle::layout.html.twig' %}
 
 {% block title %}Search{% endblock %}
 
