--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -241,6 +241,7 @@
           $navbarExpandContainer.addClass('hide');
         });
         $('.ad-desc').ajaxlink('ads');
+        $('[data-toggle="tooltip"]').tooltip();
       </script>
     {% endblock %}
   </body>
