--- a/src/Adstacy/AppBundle/Resources/views/Includes/ad.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Includes/ad.html.twig
@@ -14,10 +14,10 @@
       <a class="border-top {% if app.user %}box-medium{% else %}box-large{% endif %} btn-muted"><span class="promotes-count">{{ ad.promoteesCount }}</span> promotes</a>
       {% if app.user %}
         {% set promoted = app.user.hasPromote(ad) %}
-        <a href="{{ path('adstacy_app_ad_unpromote', {id: ad.id}) }}" title="unpromote" class="btn-success unpromote {% if not promoted %}hide{% endif %}">
+        <a href="{{ path('adstacy_app_ad_unpromote', {id: ad.id}) }}" data-toggle="tooltip" title="Unpromote" class="btn-success unpromote {% if not promoted %}hide{% endif %}">
           <span aria-hidden="true" class="icon-bullhorn">
         </a>
-        <a href="{{ path('adstacy_app_ad_promote', {id: ad.id}) }}" title="promote" class="btn-primary promote {% if promoted %}hide{% endif %}">
+        <a href="{{ path('adstacy_app_ad_promote', {id: ad.id}) }}" data-toggle="tooltip" title="Promote" class="btn-primary promote {% if promoted %}hide{% endif %}">
           <span aria-hidden="true" class="icon-bullhorn">
         </a>
       {% endif %}
