Add parse url twig function.

--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -173,3 +173,10 @@ ul.nav-expand {
 .border-top {
   border-top: 1px solid @border-color;
 }
+
+a.url {
+  color: #428bca;
+  &:hover {
+    color: darken(#428bca, 25%);
+  }
+}
