Fix unpromote border issue.

--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -23,18 +23,20 @@ body {
   box-shadow: 0 0 1px #333;
 
   .promote, .unpromote {
-    border-top: 1px solid @btn-primary-border;
     width: 86px;
   }
-
+  .promote {
+    border-top: 1px solid @btn-primary-border;
+  }
+  .unpromote {
+    border-top: 1px solid @btn-success-border;
+  }
   .box-medium {
     width: 150px;
   }
-
   .box-large {
     width: 236px;
   }
-
   .inline-block a {
     padding: 5px;
   }
