--- a/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
@@ -19,7 +19,8 @@
   {% set user = wall.user %}
   <div class="ad-single">
     {% if app.user == user %}
-      <a href="{{ path('adstacy_app_ad_edit', {id: ad.id}) }}">Edit</a>
+      <a href="{{ path('adstacy_app_ad_edit', {id: ad.id}) }}" class="btn btn-primary">Edit</a>
+      <a href="#" data-toggle="modal" data-target="#confirm-modal" class="btn btn-primary btn-log">Delete</a>
     {% endif %}
     <a href="https://twitter.com/share" class="twitter-share-button" data-related="adstacy">Tweet</a>
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
@@ -34,6 +35,23 @@
     <h3>{{ user.username }}</h3>
     {% include 'AdstacyAppBundle:Wall:follow_button.html.twig' with {wall: wall} %}
 
+  </div>
+  <div class="modal fade" id="confirm-modal">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+          <h4 class="modal-title">Delete Confirmation</h4>
+        </div>
+        <div class="modal-body">
+          <p>Are you sure you want to delete this ads?</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+          <a href="{{ path('adstacy_app_ad_delete', {id: ad.id}) }}" class="btn btn-primary">DELETE!</a>
+        </div>
+      </div>
+    </div>
   </div>
 {% endblock %}
 
