--- a/src/Adstacy/AppBundle/Resources/views/Wall/show.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Wall/show.html.twig
@@ -22,6 +22,7 @@
           {% include 'AdstacyAppBundle:Wall:follow_button.html.twig' with {wall: wall} %}
           {% if wall.user == user %}
             <a class="btn btn-primary" href="{{ path('adstacy_app_wall_edit', {id: wall.id})}}">Edit</a>
+            <a class="btn btn-primary" data-target="#confirm-modal" data-toggle="modal">Delete</a>
           {% endif %}
         </h2>
         <h3 class="description">{{ parse_hashtag(wall.description) }}</h3>
@@ -42,6 +43,23 @@
   {% for ad in wall.ads %}
     {% include 'AdstacyAppBundle:Includes:ad.html.twig' with {ad: ad} %}
   {% endfor %}
+  </div>
+  <div class="modal fade" id="confirm-modal">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+          <h4 class="modal-title">Delete Confirmation</h4>
+        </div>
+        <div class="modal-body">
+          <p>Are you sure you want to delete this wall? ALL ADS WITHIN THIS WALL WILL ALSO BE DELETED</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+          <a href="{{ path('adstacy_app_wall_delete', {id: wall.id}) }}" class="btn btn-primary">DELETE!</a>
+        </div>
+      </div>
+    </div>
   </div>
 {% endblock %}
 
