--- a/src/Adstacy/AppBundle/Resources/views/Wall/show.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Wall/show.html.twig
@@ -41,7 +41,7 @@
   </div>
   <div class="masonry">
   {% for ad in wall.ads %}
-    {% include 'AdstacyAppBundle:Includes:ad.html.twig' with {ad: ad} %}
+    {% include 'AdstacyAppBundle:Ad:ad.html.twig' with {ad: ad} %}
   {% endfor %}
   </div>
   <div class="modal fade" id="confirm-modal">
