--- a/src/Adstacy/AppBundle/Resources/views/User/show_promotes.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/User/show_promotes.html.twig
@@ -3,7 +3,7 @@
 {% block show_content %}
   <div class="masonry">
     {% for promote in promotes %}
-      {% include 'AdstacyAppBundle:Includes:ad.html.twig' with {ad: promote} %}
+      {% include 'AdstacyAppBundle:Ad:ad.html.twig' with {ad: promote} %}
     {% endfor %}
   </div>
 {% endblock %}
