--- a/src/Adstacy/AppBundle/Resources/public/less/utilities.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/utilities.less
@@ -11,15 +11,14 @@ div.table-block {
 div.inline-block {
   font-size: 0;
 
-  div, a {
+  > div, a {
     font-size: initial;
     display: inline-block;
     vertical-align: middle;
   }
 
-  a {
+  > a {
     text-align: center;
-    padding: 10px 0;
     text-decoration: none;
   }
 }
