--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -97,11 +97,11 @@
               <ul class="nav navbar-nav navbar-right">
                 {% if is_granted('IS_AUTHENTICATED_FULLY') %}
                   <li>
-                    <button type="button" class="btn btn-primary navbar-btn">
+                    <button id="create-ads" type="button" class="btn btn-primary navbar-btn">
                       <span aria-hidden="true" class="icon-plus"></span> Create Ads
                     </button>
                   </li>
-                  <li class="dropdown">
+                  <li id="user-dropdown" class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ app.user.username }}<b class="caret"></b></a>
                     <ul class="dropdown-menu">
                       <li><a href="{{ path('adstacy_app_user_profile', {username: app.user.username}) }}">Profile</a></li>
