--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -263,3 +263,13 @@ a.url {
   border-top: 1px solid @border-color;
   padding: 10px;
 }
+
+#create-ads {
+  margin-right: 20px;
+}
+
+#user-dropdown {
+  li a {
+    padding: 10px 20px;
+  }
+}
