--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -266,6 +266,11 @@ a.url {
 
 #create-ads {
   margin-right: 20px;
+  padding: 6px 12px;
+  color: #fff;
+  &:hover {
+    background-color: darken(@brand-primary, 10%);
+  }
 }
 
 #user-dropdown {
