change show ad detail layout.

--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -3,12 +3,16 @@ body {
   padding-top: 70px;
 }
 
+.masonry {
+  margin: auto;
+}
+
 .navbar {
   box-shadow: 0 1px 2px #999;
 }
 
-.masonry {
-  margin: 0 auto 14px auto;
+.body {
+  margin-bottom: 14px;
 }
 
 .adstacy-container {
@@ -184,6 +188,7 @@ a.url {
 }
 
 .ad-detail {
+  margin-bottom: 20px;
   background-color: #fff;
   margin: auto;
   max-width: 1000px;
@@ -220,10 +225,6 @@ a.url {
   border-right: 1px solid @border-color;
 }
 
-.ad-single {
-  margin-bottom: 20px;
-}
-
 .ad-detail-section {
   border-bottom: 1px solid @border-color;
 
@@ -236,6 +237,27 @@ a.url {
     margin: 10px 0 0;
     font-size: 14px;
   }
+}
+
+.centered {
+  text-align: center;
+  vertical-align: middle;
+}
+
+.ad-detail-container {
+  background-color: #fff;
+  border-radius: 5px;
+  border: 1px solid @gray-lighter;
+  box-shadow: 0 3px 3px 0 @border-color;
+}
+
+.table-row {
+  display: table;
+  width: 100%;
+}
+
+.table-cell {
+  display: table-cell;
 }
 
 .list-section {
