Use spinner.gif for holder.

--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -47,7 +47,7 @@ body {
   border-radius: 5px 5px 0 0;
 
   img {
-    background: url('../img/loading.gif') no-repeat center center;
+    background: url('../img/spinner.gif') no-repeat center center;
     border-radius: 5px 5px 0 0;
   }
 }
