--- a/src/Adstacy/AppBundle/Resources/views/User/show_ads.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/User/show_ads.html.twig
@@ -2,7 +2,7 @@
 
 {% block show_content %}
   <div class="masonry">
-    {% for ad in ads %}
+    {% for ad in paginator.getCurrentPageResults %}
       {% include 'AdstacyAppBundle:Ad:ad.html.twig' with {ad: ad} %}
     {% endfor %}
   </div>
