--- a/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
@@ -4,16 +4,6 @@
 
 {% block meta_keywords %}{{ ad.tags|join(',') }}{% endblock %}
 
-{% block facebook_scripts %}
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_GB/all.js#xfbml=1&appId=138676862997429";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
-{% endblock %}
-
 {% block content %}
   {% set wall = ad.wall %}
   {% set user = wall.user %}
@@ -28,8 +18,8 @@
           <h3>Description</h3>
           <p>{{ parse_hashtag(ad.description) }}</p>
           <p>{{ ad.promoteesCount }} promotes</p>
-          <a href="https://twitter.com/share" class="twitter-share-button" data-related="adstacy">Tweet</a>
-          <div class="fb-like" data-width="200" data-show-faces="false" data-send="false"></div>
+          <a class="tweet" href="{{ app.request.uri }}" data-via="adstacy">Tweet</a>
+          <a class="facebook-share" href="{{ app.request.uri }}">Share</a>
         </section>
         <section class="ad-detail-section list-section">
           <h3>Wall</h3>
@@ -54,7 +44,6 @@
       </div>
       <div class="ad-detail-content">
         {{ ad.content }}
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit, voluptate, quaerat, possimus, magnam iste voluptatibus nihil soluta enim eum optio esse nisi adipisci blanditiis aperiam officiis aspernatur veritatis illo ab perspiciatis pariatur eligendi asperiores atque qui assumenda deserunt nobis est illum rem aliquam odit. Esse, minus, libero, commodi, quisquam cum asperiores et odio ratione explicabo non ducimus at pariatur autem cumque tenetur dolorem dolore. Facilis, rerum, in ratione odio aliquid aperiam nobis facere deleniti. Nostrum, est quidem eius libero inventore. Aperiam, fugit magnam optio laboriosam officia reiciendis voluptatum quae dignissimos maxime numquam alias accusantium modi libero vitae dolores odio suscipit.
       </div>
     </div>
   </div>
@@ -75,8 +64,6 @@
       </div>
     </div>
   </div>
-
-  <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 {% endblock %}
 
 {% block javascripts %}
@@ -84,6 +71,26 @@
   <script type="text/javascript">
     $(function() {
       $('.ad-single').ajaxlink('show_ad');
+      $('.tweet').click(function() {
+        var $this = $(this);
+        var via = '&via='+$this.attr('data-via');
+        window.open(
+          'https://twitter.com/share?url='+encodeURIComponent(location.href)+via,
+          'Twitter Dialog', 
+          'width=626,height=436'
+        ); 
+
+        return false;
+      });
+      $('.facebook-share').click(function() {
+        window.open(
+          'https://www.facebook.com/sharer/sharer.php?u='+encodeURIComponent(location.href), 
+          'Facebook Like', 
+          'width=626,height=436'
+        ); 
+
+        return false;
+      });
     });
   </script>
 {% endblock %}
