Design user profile page header.

--- a/src/Adstacy/UserBundle/Resources/public/less/settings.less
+++ b/src/Adstacy/UserBundle/Resources/public/less/settings.less
@@ -151,3 +151,28 @@
     margin: 0 0 10px 0;
   }
 }
+
+.user-profile-container {
+  padding: 10px 20px;
+
+  .profile-picture {
+    float: left;
+    margin-right: 20px;
+    width: 150px;
+  }
+  .user-info {
+    float: left;
+    width: 85%;
+
+    .user-realname {
+      color: #555;
+      font-size: 30px;
+      margin: 0;
+    }
+    .user-about {
+      color: #888;
+      font-size: 18px;
+      line-height: 1.5;
+    }
+  }
+}
